--- a/style.css
+++ b/style.css
@@ -169,3 +169,9 @@ html{
 .cnt-tbl{
 	margin-top: 30px;
 }
+.a:hover{
+	color: whitesmoke;
+	border-radius: 50px;
+	background-color: darkslateblue;
+
+}
